add dto request/response fix domain and swagger, add api/v1 and fix router
