# backend/docs/swagger.yaml
@@ -1,6 +1,26 @@
-basePath: /
+basePath: /api/v1
 definitions:
-  justgoit-backend_internal_domain.Question:
+  justgoit-backend_internal_http_dto_request.CreateQuestionRequest:
+    properties:
+      answer:
+        type: string
+      category:
+        type: string
+      level:
+        type: string
+      popularity:
+        maximum: 100
+        minimum: 0
+        type: integer
+      title:
+        type: string
+    required:
+    - answer
+    - category
+    - level
+    - title
+    type: object
+  justgoit-backend_internal_http_dto_response.QuestionResponse:
     properties:
       answer:
         type: string
@@ -13,7 +33,6 @@ definitions:
       level:
         type: string
       popularity:
-        description: '%'
         type: integer
       title:
         type: string
@@ -35,7 +54,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/justgoit-backend_internal_domain.Question'
+              $ref: '#/definitions/justgoit-backend_internal_http_dto_response.QuestionResponse'
             type: array
         "500":
           description: Internal Server Error
@@ -50,21 +69,27 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: Question payload
+      - description: Create question
         in: body
         name: question
         required: true
         schema:
-          $ref: '#/definitions/justgoit-backend_internal_domain.Question'
+          $ref: '#/definitions/justgoit-backend_internal_http_dto_request.CreateQuestionRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/justgoit-backend_internal_domain.Question'
+            $ref: '#/definitions/justgoit-backend_internal_http_dto_response.QuestionResponse'
         "400":
           description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
           schema:
             additionalProperties:
               type: string
@@ -86,7 +111,13 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/justgoit-backend_internal_domain.Question'
+            $ref: '#/definitions/justgoit-backend_internal_http_dto_response.QuestionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
         "404":
           description: Not Found
           schema:
